--- a/designer/questionsets.ui
+++ b/designer/questionsets.ui
@@ -24,6 +24,9 @@
          <height>0</height>
         </size>
        </property>
+       <property name="toolTip">
+        <string>Move this set up in the list. You can also drag and drop items.</string>
+       </property>
        <property name="text">
         <string>Move &amp;Up</string>
        </property>
@@ -114,6 +117,9 @@
          <width>90</width>
          <height>0</height>
         </size>
+       </property>
+       <property name="toolTip">
+        <string>Move this set up in the list. You can also drag and drop items.</string>
        </property>
        <property name="text">
         <string>Move &amp;Down</string>
