mark question list shortcut with underline
I'd not thought of this before, but while the text "Question List" can't
be buddied to the list, you can still use an ampersand to put the
underline there, and it looks like it works normally. This doesn't work
for the set list of course, but there is some similarity, and it's
probably less important there. I've retained the tooltip in the set list
but deleted it as redundant here.

--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -39,7 +39,7 @@ QGroupBox::title {
 }</string>
        </property>
        <property name="title">
-        <string>Question List</string>
+        <string>Question &amp;List</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
@@ -120,7 +120,7 @@ QGroupBox::title {
              </size>
             </property>
             <property name="toolTip">
-             <string>Press Alt-L to focus the list</string>
+             <string/>
             </property>
             <property name="dragDropMode">
              <enum>QAbstractItemView::InternalMove</enum>
