--- a/designer/mw.ui
+++ b/designer/mw.ui
@@ -90,6 +90,9 @@
           <height>0</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string/>
+        </property>
         <property name="text">
          <string>&amp;Sets</string>
         </property>
