rewrite genPreview to be independent of rtf export format
That might have been a nice labor-saving trick at the beginning, but we
can make it look nicer this way.

--- a/designer/qprev.ui
+++ b/designer/qprev.ui
@@ -21,6 +21,9 @@
        <property name="readOnly">
         <bool>true</bool>
        </property>
+       <property name="tabStopWidth">
+        <number>30</number>
+       </property>
       </widget>
      </item>
      <item>
