--- a/designer/mw.ui
+++ b/designer/mw.ui
@@ -193,7 +193,7 @@
   </action>
   <action name="actionPreferences">
    <property name="text">
-    <string>Preferences...</string>
+    <string>&amp;Preferences...</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+P</string>
