--- a/designer/prefs.ui
+++ b/designer/prefs.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>262</width>
+    <width>280</width>
     <height>208</height>
    </rect>
   </property>
@@ -14,17 +14,27 @@
    <string>Preferences</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0" colspan="2">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Minutes between &amp;saves</string>
+   <item row="0" column="0" colspan="2">
+    <widget class="QCheckBox" name="debugMode">
+     <property name="toolTip">
+      <string>Show debug menu and functions, for use in active development.</string>
      </property>
-     <property name="buddy">
-      <cstring>saveInterval</cstring>
+     <property name="text">
+      <string>&amp;Debug mode</string>
+     </property>
+     <property name="tristate">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
+   <item row="5" column="1">
+    <widget class="QPushButton" name="okButton">
+     <property name="text">
+      <string>&amp;OK</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
     <widget class="QSpinBox" name="saveInterval">
      <property name="toolTip">
       <string>When making a change, if this many minutes have elapsed since the last save,
@@ -39,34 +49,24 @@ always saved on program exit.</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="2">
-    <widget class="QCheckBox" name="debugMode">
-     <property name="toolTip">
-      <string>Show debug menu and functions, for use in active development.</string>
-     </property>
-     <property name="text">
-      <string>&amp;Debug mode</string>
-     </property>
-     <property name="tristate">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="2">
+   <item row="5" column="2">
     <widget class="QPushButton" name="cancelButton">
      <property name="text">
-      <string>Cancel</string>
+      <string>&amp;Cancel</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
-    <widget class="QPushButton" name="okButton">
+   <item row="2" column="0" colspan="2">
+    <widget class="QLabel" name="label">
      <property name="text">
-      <string>OK</string>
+      <string>Minutes between &amp;saves</string>
+     </property>
+     <property name="buddy">
+      <cstring>saveInterval</cstring>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="3" column="1">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -78,6 +78,16 @@ always saved on program exit.</string>
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="QCheckBox" name="autoAnsA">
+     <property name="toolTip">
+      <string>When adding new questions, start with A selected as the correct answer rather than a blank.</string>
+     </property>
+     <property name="text">
+      <string>&amp;Auto-select answer A</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
