--- a/designer/qprev.ui
+++ b/designer/qprev.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>469</height>
+    <width>560</width>
+    <height>530</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -53,7 +53,8 @@
           </size>
          </property>
          <property name="toolTip">
-          <string>Export this quiz to an RTF file and reschedule sets used in it.</string>
+          <string>Reschedule the content of this quiz and return to the main screen.
+You must save the quiz in at least one format first.</string>
          </property>
          <property name="text">
           <string>Reschedule</string>
@@ -93,6 +94,9 @@
            <height>16777215</height>
           </size>
          </property>
+         <property name="toolTip">
+          <string>Save the quiz in the format selected.</string>
+         </property>
          <property name="text">
           <string>&amp;Save</string>
          </property>
@@ -107,7 +111,7 @@
           </size>
          </property>
          <property name="toolTip">
-          <string>Close this dialog without using this quiz.</string>
+          <string>Close this dialog without affecting scheduling.</string>
          </property>
          <property name="text">
           <string>&amp;Return to Settings</string>
