begin implementing students window
A lot more work remains to be done; roughly in order of priority:

- Add/delete need to be implemented.
- The list should be sortable.
- A way to edit a student would be nice.
- This dialog should be accessible from the classes window.
- It would be nice to make it possible to copy a student in from another
  class. This is an optional extra and depends on editing being
  plausible.
- Import/export need to be implemented.

Before anything else can be done, though, we need to fix the DB schema:
I forgot that it's necessary for students to be associated with a
specific *class*, because they might have a different TP ID / etc. in a
different class, and it's anyway not useful to have students that aren't
in the class at issue showing up in the list.

--- a/designer/mw.ui
+++ b/designer/mw.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>278</width>
-    <height>149</height>
+    <width>290</width>
+    <height>180</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,29 +23,6 @@
       <property name="verticalSpacing">
        <number>0</number>
       </property>
-      <item row="3" column="0">
-       <widget class="QPushButton" name="classesButton">
-        <property name="minimumSize">
-         <size>
-          <width>125</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>&amp;Classes</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0" colspan="2">
-       <widget class="QLabel" name="verLabel">
-        <property name="text">
-         <string>Clicker Quiz Manager Version 0</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
       <item row="4" column="1">
        <widget class="QPushButton" name="quitButton">
         <property name="minimumSize">
@@ -82,6 +59,19 @@
         </property>
        </widget>
       </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="classesButton">
+        <property name="minimumSize">
+         <size>
+          <width>125</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>&amp;Classes</string>
+        </property>
+       </widget>
+      </item>
       <item row="4" column="0">
        <widget class="QPushButton" name="setsButton">
         <property name="minimumSize">
@@ -111,6 +101,23 @@
         </property>
        </spacer>
       </item>
+      <item row="0" column="0" colspan="2">
+       <widget class="QLabel" name="verLabel">
+        <property name="text">
+         <string>Clicker Quiz Manager Version 0</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QPushButton" name="studentsButton">
+        <property name="text">
+         <string>S&amp;tudents</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
@@ -120,7 +127,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>278</width>
+     <width>290</width>
      <height>25</height>
     </rect>
    </property>
