clean up and touch-ups; implement "fast edit" mode
Fast edit mode makes it easier to add/remove a bunch of students by
disabling the delete confirmation (since there's no undo function) and
setting the add button to be the default (so a double Enter at the end
of adding a row creates a new row).

--- a/designer/mw.ui
+++ b/designer/mw.ui
@@ -114,7 +114,7 @@
       <item row="5" column="0">
        <widget class="QPushButton" name="studentsButton">
         <property name="text">
-         <string>S&amp;tudents</string>
+         <string>St&amp;udents</string>
         </property>
        </widget>
       </item>
