--- a/designer/students.ui
+++ b/designer/students.ui
@@ -27,13 +27,16 @@
           </size>
          </property>
          <property name="text">
-          <string>Class</string>
+          <string>&amp;Class</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
          <property name="margin">
           <number>0</number>
+         </property>
+         <property name="buddy">
+          <cstring>classCombo</cstring>
          </property>
         </widget>
        </item>
@@ -63,10 +66,29 @@
          </property>
         </spacer>
        </item>
+       <item>
+        <widget class="QCheckBox" name="fastEditBox">
+         <property name="toolTip">
+          <string>When enabled, pressing Enter at the end of a line will create
+a new entry, and you will not be asked to confirm deletions.</string>
+         </property>
+         <property name="text">
+          <string>&amp;Fast edit</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
      <item>
       <widget class="QTableView" name="tableView">
+       <property name="contextMenuPolicy">
+        <enum>Qt::ActionsContextMenu</enum>
+       </property>
+       <property name="toolTip">
+        <string>Press Alt-L to focus this list.
+Double-click or press F2 to edit a cell.
+Press Tab to move between cells.</string>
+       </property>
        <property name="editTriggers">
         <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
        </property>
@@ -76,6 +98,9 @@
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectItems</enum>
        </property>
+       <attribute name="horizontalHeaderHighlightSections">
+        <bool>false</bool>
+       </attribute>
        <attribute name="horizontalHeaderStretchLastSection">
         <bool>true</bool>
        </attribute>
@@ -129,7 +154,7 @@
        <item>
         <widget class="QPushButton" name="closeButton">
          <property name="text">
-          <string>&amp;Close</string>
+          <string>Cl&amp;ose</string>
          </property>
          <property name="autoDefault">
           <bool>false</bool>
@@ -142,6 +167,16 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>classCombo</tabstop>
+  <tabstop>fastEditBox</tabstop>
+  <tabstop>tableView</tabstop>
+  <tabstop>addButton</tabstop>
+  <tabstop>deleteButton</tabstop>
+  <tabstop>importButton</tabstop>
+  <tabstop>exportButton</tabstop>
+  <tabstop>closeButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
