implement sorting students; dialog tweaks
Sorting was surprisingly easy, once I got past the trap of directly
calling sort() in the model to set the initial sort, using the view's
function instead. (It does make a lot more sense to do it through the
view; that just wasn't the first function I saw!)

The tooltip explaining the editing functions of the table was getting in
the way constantly, so I disabled it and will just try to make sure it's
properly documented, though I have to say it seems rather unintuitive. I
don't have a better solution.

--- a/designer/students.ui
+++ b/designer/students.ui
@@ -85,18 +85,19 @@ a new entry, and you will not be asked to confirm deletions.</string>
         <enum>Qt::ActionsContextMenu</enum>
        </property>
        <property name="toolTip">
-        <string>Press Alt-L to focus this list.
-Double-click or press F2 to edit a cell.
-Press Tab to move between cells.</string>
+        <string/>
        </property>
        <property name="editTriggers">
-        <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
+        <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
        </property>
        <property name="selectionMode">
         <enum>QAbstractItemView::SingleSelection</enum>
        </property>
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectItems</enum>
+       </property>
+       <property name="sortingEnabled">
+        <bool>true</bool>
        </property>
        <attribute name="horizontalHeaderHighlightSections">
         <bool>false</bool>
