add count of students to bottom of students window
Like for the questions dialog, I think this is an unobtrusive way to
catch errors where you forgot to enter a given student.

--- a/designer/students.ui
+++ b/designer/students.ui
@@ -113,6 +113,13 @@ a new entry, and you will not be asked to confirm deletions.</string>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
+        <widget class="QLabel" name="studentsLabel">
+         <property name="text">
+          <string>Students: 00</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="addButton">
          <property name="text">
           <string>&amp;Add</string>
@@ -134,6 +141,9 @@ a new entry, and you will not be asked to confirm deletions.</string>
        </item>
        <item>
         <widget class="QPushButton" name="importButton">
+         <property name="toolTip">
+          <string>Import students from a CSV file.</string>
+         </property>
          <property name="text">
           <string>&amp;Import</string>
          </property>
@@ -144,6 +154,9 @@ a new entry, and you will not be asked to confirm deletions.</string>
        </item>
        <item>
         <widget class="QPushButton" name="exportButton">
+         <property name="toolTip">
+          <string>Export the list of students to a CSV file.</string>
+         </property>
          <property name="text">
           <string>&amp;Export</string>
          </property>
