fix tab order in question editor
I'm still not sure this is necessarily the best from an efficiency point
of view, but I think it is probably the most logical. I can always
change it again later.

--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -635,11 +635,13 @@ QGroupBox::title {
  <tabstops>
   <tabstop>questionList</tabstop>
   <tabstop>newButton</tabstop>
-  <tabstop>deleteButton</tabstop>
-  <tabstop>importButton</tabstop>
   <tabstop>moveUpButton</tabstop>
+  <tabstop>deleteButton</tabstop>
   <tabstop>moveDownButton</tabstop>
+  <tabstop>importButton</tabstop>
   <tabstop>exportButton</tabstop>
+  <tabstop>genQuizButton</tabstop>
+  <tabstop>randomizeButton</tabstop>
   <tabstop>questionBox</tabstop>
   <tabstop>difficultySpinner</tabstop>
   <tabstop>answerA</tabstop>
